# PL-inertial-slam

./: CMakeLists.txt  README.md
IMU/: IMUPreintegrator.cpp  IMUPreintegrator.h  NavState.cpp  NavState.h  g2otypes.cpp  g2otypes.h  imudata.cpp  imudata.h  marginalization.cpp  marginalization.h  se3_ops.hpp  types_sba.cpp  types_sba.h  types_six_dof_expmap.cpp  types_six_dof_expmap.h
app/: plslam_dataset.cpp
config/: scene_config.ini
config/config/: config_euroc.yaml
config/dataset_params/: dataset_params.yaml
include/: keyFrame.h  mapFeatures.h  mapHandler.h  slamScene.h
src/: keyFrame.cpp  mapHandler.cpp  slamScene.cpp
stvo-pl/include/: dataset.h  pinholeStereoCamera.h  stereoFrame.h  stereoFrameHandler.h
stvo-pl/src/: dataset.cpp  pinholeStereoCamera.cpp  stereoFrame.cpp  stereoFrameHandler.cpp
test/: test.cpp
understand/: pl-slam.udb
